# LureGuard.ai

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  DATA_CONTRACT.md  LICENSE  Makefile  PRODUCT-STATUS.md  README.md  docker-compose.yml  install.sh  opencode.json  pyproject.toml  test_telegram_messages.py  update-system.py
config/: core.yaml  whitelist.json
connectors/: __init__.py  telegram.py  wazuh_api.py
core/: Dockerfile  config.py  main.py
docs/: ARCHITECTURE.md  GRAFANA.md  MCP-TOOLS.md  README.md  SCRIPTS.md  SETUP.md  SKILLS-AND-MODES.md
lureguard_mcp/: __init__.py  __main__.py  agent_restart.py  alert_watcher.py  blocklist.py  config.py  container_posture.py  container_scanner.py  context.py  correlator.py  cve_triage.py  db.py  detection_scanner.py  doctor.py  enrichment.py  exposure_scanner.py  mcp_json.py  onboarding.py  posture_snapshot.py  presentation.py  rag.py  report_charts.py  report_pdf.py  report_storage.py  sca_scanner.py  scan_scheduler.py  secrets.py  server.py  ssh_remote.py  system_update.py  untrusted_text.py  user_scanner.py  vuln_scanner.py  wazuh_client.py  whitelist.py
migrations/: env.py
ml/: __init__.py  alert_features.py  dataset_loaders.py  drift_monitor.py  extractor.py  feature_contract.py  generate_tutor_report.py  train.py  training_utils.py
scripts/: ensure_ml_artifacts.sh  setup_venv.sh
skills/: _shared.md  daily-summary.md  incident-report.md  investigate-host.md  investigate-web.md  ioc-sweep.md  onboard-host.md  opencode-mcp.md  refresh-posture.md  security-posture.md  triage.md
tests/: conftest.py  test_alert_datasets.py  test_alert_format.py  test_collector.py  test_core_security.py  test_enrichment.py  (+15 more)
(+92 files in other folders)
