[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lureguard"
version = "1.0.0"
description = "Plug-and-play AI security analyst for Wazuh — agentic triage, investigation, and reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "slowapi>=0.1.9",
    "loguru>=0.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
train = [
    "kagglehub>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
mcp = [
    "mcp>=1.2.0",
    "psycopg2-binary>=2.9.9",
    "asyncssh>=2.14.0",
    "matplotlib>=3.8.0",
    "markdown>=3.6",
    "weasyprint>=62.0",
    "xhtml2pdf>=0.2.15",
]
lint = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*", "lureguard_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["core", "."]
markers = [
    "integration: requires running Core on localhost:8080",
]
